instructions.Instructions.scala.error
Compilation error:
Instructions:3: error: too many arguments for method right: ()Unit
right(2)
     ^Instructions:5: error: too many arguments for method left: ()Unit
left(2)
    ^