instructions.Instructions.scala.code
forward()
brushDown()
right(2)
brushUp()
left(2)
